[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-python"
version = "0.1.0"
description = "LeetCode solutions in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py314"
